Добавила разметку секции Преимущества на Главной

--- a/source/html/sections/about.html
+++ b/source/html/sections/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about__wrapper">
  <h1 class="primary-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h1>
  <p class="simple-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
  <p class="simple-text uppercase">Выполняем заказы на разработку:</p>
