прописывает путь в index.html для блока слайдер

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,9 @@
     </head>
     <body class="page__body">
         @@include('./html/layout/header.html')
-        <main></main>
+        <main>
+        @@include('./html/sections/slider.html')
+        </main>
         @@include('./html/layout/footer.html')
         <script type="module" src="./js/script.min.js"></script>
     </body>
