Поправила разметку в секциях Услуги и О нас, подключила эти секции в index.html

--- a/source/html/sections/about.html
+++ b/source/html/sections/about.html
@@ -1,12 +1,28 @@
 <section class="about__wrapper">
- <h1 class="primary-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h1>
+<div class="container">
+ <h2 class="secondary-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
  <p class="simple-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
  <p class="simple-text uppercase">Выполняем заказы на разработку:</p>
  <ul class="about-list">
-	<li class="about-item">
-		<p class="simple-text">Веб-сайтов любой сложности</p>
-		<p class="simple-text">Мобильных приложений для iOS и Android</p>
-		<p class="simple-text">Слайдшоу и видео для корпоративных презентаций</p>
+	<li class="about-item">Веб-сайтов любой сложности</li>
+	<li class="about-item">Мобильных приложений для iOS и Android</li>
+	<li class="about-item">Слайдшоу и видео для корпоративных презентаций</li>
 	</li>
  </ul>
+</div>
+<div class="container">
+<img src="#" width="360" height="280" alt="Логотип Nerds">
+<p class="simple-text uppercase">С 2004 года Любим точность во всем:</p>
+<ul class="advantages-list">
+  <li class="advantages-list-item">146<sup class="percentage">%</sup>
+  <p class="simple-text advantages">Уровень самоотдачи</p>
+  </li>
+  <li class="advantages-list-item">100<sup class="percentage">%</sup>
+  <p class="simple-text advantages">Соблюдение сроков</p>
+  </li>
+  <li class="advantages-list-item">50<sup class="percentage">%</sup>
+  <p class="simple-text advantages">Минимальная предоплата</p>
+  </li>
+</ul>
+</div>
 </section>
