--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,10 @@
     </head>
     <body class="page__body">
         @@include('./html/layout/header.html')
-        <main></main>
+        <main>
+		@@include('./html/sections/services.html')
+		@@include('./html/sections/about.html')
+		</main>
         @@include('./html/layout/footer.html')
         <script type="module" src="./js/script.min.js"></script>
     </body>
