--- a/source/html/sections/services.html
+++ b/source/html/sections/services.html
@@ -2,19 +2,19 @@
 	<ul class="services-list">
 		<li class="services-item services__wrapper">
 			<img src="#" class="services-image" width="300" height="146" alt="Ноутбук с открытым браузером">
-			<h2 class="secondary-title">Веб-сайты</h2>
+			<h3 class="third-title">Веб-сайты</h3>
 			<p class="simple-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
 			<button class="services-button" type="button">Заказать</button>
 		</li>
 		<li class="services-item services__wrapper">
 			<img src="#" class="services-image" width="300" height="146" alt="Два смартфона с открытыми приложениями">
-			<h2 class="secondary-title">Приложения</h2>
+			<h3 class="third-title">Приложения</h3>
 			<p class="simple-text">Покорите топ-10 приложений в AppStore и Google Play</p>
 			<button class="services-button" type="button">Заказать</button>
 		</li>
 		<li class="services-item services__wrapper">
 			<img src="#" class="services-image" width="300" height="146" alt="Флипчарт с презентацией">
-			<h2 class="secondary-title">Презентации</h2>
+			<h3 class="third-title">Презентации</h2>
 			<p class="simple-text">Вы даже не подозреваете, насколько вы изумительны!</p>
 			<button class="services-button" type="button">Заказать</button>
 		</li>
