--- a/source/html/sections/slider.html
+++ b/source/html/sections/slider.html
@@ -1,6 +1,25 @@
 <section class="slider">
     <div class="container">
-        <h2>Слайдер</h2>
+        <ul class="slider__list">
+            <li class="slider__item">
+                <div class="slider__item-desc">
+                    <h2 class="slider__item-title">Долго, дорого, скрупулезно.</h2>
+                    <p class="slider__item-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                    <a class="slider__item-btn" href="#">УЗНАТЬ БОЛЬШЕ</a>
+                </div>
+            </li>
+        </ul>
+        <ul class="slider-pagination__list">
+            <li class="slider-pagination__item">
+                <button class="slider-pagination__btn" type="button"></button>
+            </li>
+            <li class="slider-pagination__item">
+                <button class="slider-pagination__btn" type="button"></button>
+            </li>
+            <li class="slider-pagination__item">
+                <button class="slider-pagination__btn slider-pagination__active" type="button"></button>
+            </li>
+        </ul>
     </div>
 </section>
 
