--- a/source/html/sections/slider.html
+++ b/source/html/sections/slider.html
@@ -1,23 +1,30 @@
 <section class="slider">
     <div class="container">
         <ul class="slider__list">
-            <li class="slider__item">
+            <li class="slider__item slider__item-active">
                 <div class="slider__item-desc">
                     <h2 class="slider__item-title">Долго, дорого, скрупулезно.</h2>
                     <p class="slider__item-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
                     <a class="slider__item-btn" href="#">УЗНАТЬ БОЛЬШЕ</a>
                 </div>
+            
             </li>
         </ul>
         <ul class="slider-pagination__list">
             <li class="slider-pagination__item">
-                <button class="slider-pagination__btn" type="button"></button>
+                <button class="slider-pagination__btn" type="button" aria-label="">
+                    <span class="visually-hidden">1</span>
+                </button>
             </li>
             <li class="slider-pagination__item">
-                <button class="slider-pagination__btn" type="button"></button>
+                <button class="slider-pagination__btn" type="button">
+                    <span class="visually-hidden">2</span>
+                </button>
             </li>
             <li class="slider-pagination__item">
-                <button class="slider-pagination__btn slider-pagination__active" type="button"></button>
+                <button class="slider-pagination__btn slider-pagination__active" type="button">
+                    <span class="visually-hidden">3</span>
+                </button>
             </li>
         </ul>
     </div>
