--- a/source/html/sections/about.html
+++ b/source/html/sections/about.html
@@ -10,7 +10,7 @@
 	</li>
  </ul>
 </div>
-<div class="container">
+<div class="about__wrapper">
 <img src="#" width="360" height="280" alt="Логотип Nerds">
 <p class="simple-text uppercase">С 2004 года Любим точность во всем:</p>
 <ul class="advantages-list">
