добавляет стили состояния кнопке в слайдере

--- a/source/html/sections/slider.html
+++ b/source/html/sections/slider.html
@@ -10,9 +10,9 @@
             </li>
         </ul>
         <div class="slider-pagination__wrapper">
-            <button class="slider-pagination__btn" type="button" aria-label=""></button>
-            <button class="slider-pagination__btn" type="button" aria-label=""></button>
-            <button class="slider-pagination__btn active" type="button" aria-label=""></button>
+            <button class="slider-pagination__btn slider-active" type="button" aria-label="Первый слайдер"></button>
+            <button class="slider-pagination__btn" type="button" aria-label="Второй слайдер"></button>
+            <button class="slider-pagination__btn" type="button" aria-label="Третий слайдер"></button>
         </div>
         
     </div>
