--- a/source/html/sections/slider.html
+++ b/source/html/sections/slider.html
@@ -1,16 +1,23 @@
 <section class="slider">
     <div class="container">
         <ul class="slider__list">
-            <li class="slider__item slider__item-active">
-                <div class="slider__item-wrapper">
+            <li class="slider__item-active">
+                <div class="slider__item-wrapper ">
                     <h2 class="slider__item-title">Любим математику как никто другой</h2>
                     <p class="slider__item-text">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
                     <a class="slider__item-btn" href="#">УЗНАТЬ БОЛЬШЕ</a>
                 </div>
             </li>
+            <!-- <li class=" slider__item-active">
+                <div class="slider__item-wrapper ">
+                    <h2 class="slider__item-title">Долго, дорого, скрупулезно.</h2>
+                    <p class="slider__item-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                    <a class="slider__item-btn" href="#">УЗНАТЬ БОЛЬШЕ</a>
+                </div>
+            </li> -->
         </ul>
         <div class="slider-pagination__wrapper">
-            <button class="slider-pagination__btn slider-active" type="button" aria-label="Первый слайдер"></button>
+            <button class="slider-pagination__btn slider-pagination-active" type="button" aria-label="Первый слайдер"></button>
             <button class="slider-pagination__btn" type="button" aria-label="Второй слайдер"></button>
             <button class="slider-pagination__btn" type="button" aria-label="Третий слайдер"></button>
         </div>
