добавляет базовая разметка для  модального окна

--- a/source/html/sections/map.html
+++ b/source/html/sections/map.html
@@ -13,3 +13,34 @@
         </div>
     </div>
 </section>
+<div class="modal-container">
+    <div class="modal modal__auth">
+        <button class="modal__close-btn">
+            <span class="visually-hidden">Закрыть</span>
+        </button>
+        <section class="modal__content">
+            <h2 class="modal__title">Напишите нам</h2>
+            <form class="auth-form" action="" method="post">
+                <ul class="auth-form__list">
+                    <li class="auth-form__item">
+                        <label class="auth-form__title" for="modal-name">Ваше имя:</label>
+                        <input class="auth-form__field" type="text" id="modal-name" name="name" placeholder="Имя Фамилия">
+                    </li>
+                    <li class="auth-form__item">
+                        <label class="auth-form__title" for="modal-email">Ваш email:</label>
+                        <input class="auth-form__field" type="text" id="modal-email" name="email" placeholder="email@example.com">
+                    </li>
+                </ul>
+                <p class="auth-form__text">
+                    <label class="auth-form__title" for="modal-text">Текст письма:</label>
+                    <textarea class="auth-form__textarea" name="text" id="modal-text" placeholder="В свободной форме"></textarea>
+                </p>
+                <button type="button">Отправить</button>
+            </form>
+        </section>
+        
+        <ul>
+
+        </ul>
+    </div>
+</div>
