--- a/source/html/sections/map.html
+++ b/source/html/sections/map.html
@@ -8,7 +8,7 @@
                     <p class="map-contacts__text">наб. Реки Карповки, <br> 5 лит П, Санкт-Петербург</p>
                     <a class="map-contacts__phone" href="tel:+78005558628">+7 800 555-86-28</a>
                 </address>
-                <button class="map-contacts__btn">Напишите нам</button>
+                <button class="map-contacts__btn" type="button">Напишите нам</button>
             </div>
         </div>
     </div>
@@ -24,23 +24,19 @@
                 <ul class="auth-form__list">
                     <li class="auth-form__item">
                         <label class="auth-form__title" for="modal-name">Ваше имя:</label>
-                        <input class="auth-form__field" type="text" id="modal-name" name="name" placeholder="Имя Фамилия">
+                        <input class="auth-form__input" type="text" id="modal-name" name="name" placeholder="Имя Фамилия">
                     </li>
                     <li class="auth-form__item">
                         <label class="auth-form__title" for="modal-email">Ваш email:</label>
-                        <input class="auth-form__field" type="text" id="modal-email" name="email" placeholder="email@example.com">
+                        <input class="auth-form__input" type="text" id="modal-email" name="email" placeholder="email@example.com">
                     </li>
                 </ul>
                 <p class="auth-form__text">
                     <label class="auth-form__title" for="modal-text">Текст письма:</label>
                     <textarea class="auth-form__textarea" name="text" id="modal-text" placeholder="В свободной форме"></textarea>
                 </p>
-                <button type="button">Отправить</button>
+                <button class="auth-form__btn" type="button">Отправить</button>
             </form>
         </section>
-        
-        <ul>
-
-        </ul>
     </div>
 </div>
