добавляет стили состояния для кнопки отправить в модальном окне

--- a/source/html/sections/map.html
+++ b/source/html/sections/map.html
@@ -13,7 +13,9 @@
         </div>
     </div>
 </section>
-<div class="modal-container">
+
+<!-- Модальное окно -->
+<div class="modal-container modal-active">
     <div class="modal modal__auth">
         <button class="modal__close-btn">
             <span class="visually-hidden">Закрыть</span>
