--- a/source/html/sections/map.html
+++ b/source/html/sections/map.html
@@ -15,7 +15,7 @@
 </section>
 
 <!-- Модальное окно -->
-<div class="modal-container modal-active">
+<div class="modal-container modal-close">
     <div class="modal modal__auth">
         <button class="modal__close-btn">
             <span class="visually-hidden">Закрыть</span>
