закомментирует другие слайды

--- a/source/html/sections/slider.html
+++ b/source/html/sections/slider.html
@@ -8,20 +8,20 @@
                     <a class="slider__item-btn" href="#">УЗНАТЬ БОЛЬШЕ</a>
                 </div>
             </li>
-            <li class=" slider__item">
+            <!-- <li class=" slider__item">
                 <div class="slider__item-wrapper ">
                     <h2 class="slider__item-title">Долго, дорого, скрупулезно.</h2>
                     <p class="slider__item-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
                     <a class="slider__item-btn" href="#">УЗНАТЬ БОЛЬШЕ</a>
                 </div>
-            </li>
-            <li class=" slider__item">
+            </li> -->
+            <!-- <li class=" slider__item">
                 <div class="slider__item-wrapper ">
                     <h2 class="slider__item-title">Долго, дорого, скрупулезно.</h2>
                     <p class="slider__item-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
                     <a class="slider__item-btn" href="#">УЗНАТЬ БОЛЬШЕ</a>
                 </div>
-            </li>
+            </li> -->
         </ul>
         <ol class="slider-pagination__wrapper">
             <li>
