добавляет js открытие/закрытир модального окна

--- a/source/html/sections/map.html
+++ b/source/html/sections/map.html
@@ -8,16 +8,16 @@
                     <p class="map-contacts__text">наб. Реки Карповки, <br> 5 лит П, Санкт-Петербург</p>
                     <a class="map-contacts__phone" href="tel:+78005558628">+7 800 555-86-28</a>
                 </address>
-                <button class="map-contacts__btn" type="button">Напишите нам</button>
+                <button class="map-contacts__btn" type="submit">Напишите нам</button>
             </div>
         </div>
     </div>
 </section>
 
 <!-- Модальное окно -->
-<div class="modal-container modal-close">
+<div class="modal-container " id="overlay">
     <div class="modal modal__auth">
-        <button class="modal__close-btn">
+        <button class="modal__close-btn" type="button">
             <span class="visually-hidden">Закрыть</span>
             <svg class="modal__close-img" width="21.000000" height="21.000000" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <defs>
