--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body class="page__body">
+        <!-- <div id="overlay"></div> -->
         @@include('./html/layout/header.html')
         <main>
             @@include('./html/sections/slider.html')
