переносит стили для модального окна в modal.scss

--- a/source/index.html
+++ b/source/index.html
@@ -17,6 +17,7 @@
         @@include('./html/sections/map.html')
         </main>
         @@include('./html/layout/footer.html')
+        <!-- @@include('./html/layout/modal.html') -->
         <script type="module" src="./js/script.min.js"></script>
     </body>
 </html>
