add About-section, add Form-section

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,6 +8,7 @@
     </head>
     <body class="page__body">
         @@include('./html/layout/header.html')
+		@@include('./html/sections/form.html')
         <main></main>
         @@include('./html/layout/footer.html')
         <script type="module" src="./js/script.min.js"></script>
