--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
         @@include('./html/layout/header.html')
         <main>
         @@include('./html/sections/slider.html')
+		@@include('./html/sections/about.html')
         </main>
         @@include('./html/layout/footer.html')
         <script type="module" src="./js/script.min.js"></script>
