--- a/source/html/sections/about.html
+++ b/source/html/sections/about.html
@@ -1,12 +1,43 @@
-<section class="about__wrapper">
- <h1 class="primary-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h1>
- <p class="simple-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
- <p class="simple-text uppercase">Выполняем заказы на разработку:</p>
- <ul class="about-list">
-	<li class="about-item">
-		<p class="simple-text">Веб-сайтов любой сложности</p>
-		<p class="simple-text">Мобильных приложений для iOS и Android</p>
-		<p class="simple-text">Слайдшоу и видео для корпоративных презентаций</p>
-	</li>
- </ul>
+<section class="about">
+	<h2 class="visually-hidden">О студии из Краснодара</h2>
+	<div class="about__block block_1">
+		<p class="about__heading">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+		<p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
+			Работаем не покладая рук, как роботы.</p>
+		<p class="about__list-heading">Выполняем заказы на разработку:</p>
+		<ul class="about__list">
+			<li class="about__list-item">Веб-сайтов любой сложности</li>
+			<li class="about__list-item">Мобильных приложений для iOS и Android</li>
+			<li class="about__list-item">Слайдшоу и видео для корпоративных презентаций</li>
+		</ul>
+	</div>
+	<div class="about__block block_2">
+		<img src="images/nerds_logo.png" width="360" height="208" alt="Логотип дизайн-студии Нёрдс">
+		<div class="stat">
+			<p class="stat__heading">с 2004 года любим точность во всем:</p>
+			<ul class="stat__list">
+				<li class="stat__list_item">
+					<span class="stat__percent">
+						146
+						<sup class="percent">%</sup>
+					</span>
+					<p class="stat__text">Уровень самоотдачи</p>
+				</li>
+				<li class="stat__list_item">
+					<span class="stat__percent">
+						100
+						<sup class="percent">%</sup>
+					</span>
+					<p class="stat__text">Соблюдение сроков</p>
+				</li>
+				<li class="stat__list_item">
+					<span class="stat__percent">
+						50
+						<sup class="percent">%</sup>
+					</span>
+					<p class="stat__text">Минимальная предоплата</p>
+				</li>
+			</ul>
+		</div>
+	</div>
 </section>
