Slider for nerds, by Denis Markov

--- a/source/html/sections/slider.html
+++ b/source/html/sections/slider.html
@@ -9,7 +9,7 @@
                 </div>
             </li>
             <li class="slider__item">
-                <div class="slider__item-wrapper ">
+                <div class="slider__item-wrapper">
                     <h2 class="slider__item-title">Долго, дорого, скрупулезно.</h2>
                     <p class="slider__item-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
                     <a class="slider__item-btn" href="#">УЗНАТЬ БОЛЬШЕ</a>
@@ -17,8 +17,8 @@
             </li>
             <li class=" slider__item">
                 <div class="slider__item-wrapper ">
-                    <h2 class="slider__item-title">Долго, дорого, скрупулезно.</h2>
-                    <p class="slider__item-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                    <h2 class="slider__item-title">Только ночь, только хардкор</h2>
+                    <p class="slider__item-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
                     <a class="slider__item-btn" href="#">УЗНАТЬ БОЛЬШЕ</a>
                 </div>
             </li>
