--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Главная страница</title>
+        <title>Магазин</title>
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body class="page__body">
         @@include('./html/layout/header.html')
-		@@include('./html/sections/form.html')
+		@@include('./html/sections/filter.html')
+		@@include('./html/sections/templates.html')
+		@@include('./html/sections/map-catalog.html')
         <main></main>
         @@include('./html/layout/footer.html')
         <script type="module" src="./js/script.min.js"></script>
