--- a/source/html/sections/about.html
+++ b/source/html/sections/about.html
@@ -1,43 +1,36 @@
 <section class="about">
+	<!-- <div class="container"> -->
 	<h2 class="visually-hidden">О студии из Краснодара</h2>
-	<div class="about__block block_1">
-		<p class="about__heading">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+	<div class="about__block about__block-1">
+		<p class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
 		<p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
 			Работаем не покладая рук, как роботы.</p>
-		<p class="about__list-heading">Выполняем заказы на разработку:</p>
+		<p class="about__list-title">Выполняем заказы на разработку:</p>
 		<ul class="about__list">
 			<li class="about__list-item">Веб-сайтов любой сложности</li>
 			<li class="about__list-item">Мобильных приложений для iOS и Android</li>
 			<li class="about__list-item">Слайдшоу и видео для корпоративных презентаций</li>
 		</ul>
 	</div>
-	<div class="about__block block_2">
+	<div class="about__block about__block-2">
 		<img src="images/nerds_logo.png" width="360" height="208" alt="Логотип дизайн-студии Нёрдс">
-		<div class="stat">
-			<p class="stat__heading">с 2004 года любим точность во всем:</p>
-			<ul class="stat__list">
-				<li class="stat__list_item">
-					<span class="stat__percent">
-						146
-						<sup class="percent">%</sup>
-					</span>
-					<p class="stat__text">Уровень самоотдачи</p>
+		<div class="about__stat">
+			<p class="about__stat-title">с 2004 года любим точность во всем:</p>
+			<ul class="about__stat-list">
+				<li class="about__stat-item">
+					<span class="about__stat-percent">146</span><span class="about__percent">%</span>
+					<p class="about__stat-text">Уровень самоотдачи</p>
 				</li>
-				<li class="stat__list_item">
-					<span class="stat__percent">
-						100
-						<sup class="percent">%</sup>
-					</span>
-					<p class="stat__text">Соблюдение сроков</p>
+				<li class="about__stat-item">
+					<span class="about__stat-percent">100</span><span class="about__percent">%</span>
+					<p class="about__stat-text">Соблюдение сроков</p>
 				</li>
-				<li class="stat__list_item">
-					<span class="stat__percent">
-						50
-						<sup class="percent">%</sup>
-					</span>
-					<p class="stat__text">Минимальная предоплата</p>
+				<li class="about__stat-item">
+					<span class="about__stat-percent">50</span><span class="about__percent">%</span>
+					<p class="about__stat-text">Минимальная предоплата</p>
 				</li>
 			</ul>
 		</div>
 	</div>
+<!-- </div> -->
 </section>
