--- a/source/index.html
+++ b/source/index.html
@@ -13,6 +13,7 @@
             @@include('./html/sections/slider.html')
 			@@include('./html/sections/services.html')
 			@@include('./html/sections/about.html')
+			@@include('./html/sections/partners.html')
 			@@include('./html/sections/map.html')
         </main>
         @@include('./html/layout/footer.html')
