--- a/source/html/sections/filter.html
+++ b/source/html/sections/filter.html
@@ -97,9 +97,19 @@
 					</ul>
 				</div>
 			</div>
+			<!-- Карточка товаров -->
 			<div class="filter-card__wrapper">
 				
 			</div>	
+			<!-- Пагинация -->
+			<div class="filter filter-pagination">
+				<ol class="filter-pagination__list">
+					<li>1</li>
+					<li>2</li>
+					<li>3</li>
+					<li>Следующая</li>
+				</ol>
+			</div>
 		</div>
 	</div>	
 </section>
