добавляет grid-сетку страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
     <body class="page__body">
         @@include('./html/layout/header.html')
 		@@include('./html/sections/filter.html')
-		@@include('./html/sections/templates.html')
+		<!-- @@include('./html/sections/templates.html') -->
 		@@include('./html/sections/map-catalog.html')
         <main></main>
         @@include('./html/layout/footer.html')
