--- a/source/html/sections/filter.html
+++ b/source/html/sections/filter.html
@@ -1,6 +1,6 @@
 <section class="filter">
-	<header class="filter-header">
-		<h1 class="filter-header__title">Магазин готовых шаблонов</h1>
+	<header class="filter__header">
+		<h1 class="filter__header-title">Магазин готовых шаблонов</h1>
 	</header>
 	<div class="container">
 		<h2 class="visually-hidden">Выбор макета</h2>
