--- a/source/html/sections/filter.html
+++ b/source/html/sections/filter.html
@@ -29,7 +29,7 @@
 				<!-- вариант сетки -->
 				<fieldset class="catalog-form__template-type">
 					<legend class="catalog-form__title">Сетка:</legend>
-					<ul class="catalog-form__teplate-list">
+					<ul class="catalog-form__tepmlate-list">
 						<li class="catalog-form__template-item">
 							<label><input type="radio" name="template-type" value="adapt" checked>Адаптивная</label>
 						</li>
@@ -69,28 +69,27 @@
 			</form>
 			<div class="catalog-sort catalog-sort__wrapper">
 				<!-- сортировка выбранных макетов-->
-				<div class="catalog-sort__types">
-					<h2 class="catalog-sort__title">Сoртировать:</h2>
+				<h2 class="catalog-sort__title">Сoртировать:</h2>
+				<div>
 					<ul class="catalog-sort__list">
 						<li class="catalog-sort__item">
-							<button class="catalog-sort__button catalog__button-price" type="button">По цене</button>
+							<button class="catalog-sort__button catalog-sort__button_price catalog-sort__button--current" type="button">По цене</button>
 						</li>
 						<li class="catalog-sort__item">
-							<button class="catalog-sort__button catalog__button-type" type="button">По типу</button>
+							<button class="catalog-sort__button catalog-sort__button_type" type="button">По типу</button>
 						</li>
 						<li class="catalog-sort__item">
-							<button class="catalog-sort__button catalog__button-name" type="button">По названию</button>
+							<button class="catalog-sort__button catalog-sort__button_name" type="button">По названию</button>
 						</li>
 					</ul>
 				</div>
-
 				<!-- сортировка выбранных макетов 2-->
-				<ul class="catalog-icons catalog-icons__list">
+				<ul class=" catalog-icons__list">
 					<li class="catalog-icons__item">
-						<button class="catalog__button catalog__button-up" type="button"><span class="visually-hidden">По убыванию</span></button>
+						<button class="catalog-icons__button catalog-icons__button-up" type="button"><span class="visually-hidden">По убыванию</span></button>
 					</li>
 					<li class="catalog-icons__item">
-						<button class="catalog__button catalog__button-down" type="button"><span class="visually-hidden">По возрастанию</span></button>
+						<button class="catalog-icons__button catalog-icons__button-down" type="button"><span class="visually-hidden">По возрастанию</span></button>
 					</li>
 				</ul>
 			</div>
@@ -101,31 +100,61 @@
 							<a href="#">
 								<img src="./../../images/decors/template-1.png" alt="Шаблон магазина Седона" width="358" height="577">
 							</a>
+							<!-- <div class="catalog-cards__hover">
+								<h3 class="catalog-cards__hover__title">Sedona</h3>
+								<p class="catalog-cards__hover__text">Информационный сайт для туристов</p>
+								<button class="button catalog-cards__hover__btn" type="button"><span class="catalog-cards__price">9 900 ₽</span></button>
+							</div> -->
 						</li>
 						<li class="catalog-cards__item">
 							<a href="#">
 								<img src="./../../images/decors/template-2.png" alt="Шаблон магазина Пинк" width="358" height="578">
 							</a>
+							<!-- <div class="catalog-cards__hover">
+								<h3 class="catalog-cards__hover__title">Pink</h3>
+								<p class="catalog-cards__hover__text">Информационный сайт для жителей мегаполиса</p>
+								<button class="button catalog-cards__hover__btn" type="button"><span class="catalog-cards__price">8 900 ₽</span></button>
+							</div> -->
 						</li>
 						<li class="catalog-cards__item">
 							<a href="#">
 								<img src="./../../images/decors/template-3.png" alt="Шаблон магазина Барбершоп" width="358" height="578">
 							</a>
+							<!-- <div class="catalog-cards__hover">
+								<h3 class="catalog-cards__hover__title">Borodinski</h3>
+								<p class="catalog-cards__hover__text">Информационный сайт для барбершопа</p>
+								<button class="button catalog-cards__hover__btn" type="button"><span class="catalog-cards__price">10 900 ₽</span></button>
+							</div> -->
 						</li>
 						<li class="catalog-cards__item">
 							<a href="#">
 								<img src="./../../images/decors/template-4.png" alt="Шаблон магазина Мишка" width="358" height="578">
 							</a>
+							<!-- <div class="catalog-cards__hover">
+								<h3 class="catalog-cards__hover__title">Mishka</h3>
+								<p class="catalog-cards__hover__text">Информационный сайт для магазина вязаных вещей</p>
+								<button class="button catalog-cards__hover__btn" type="button"><span class="catalog-cards__price">11 900 ₽</span></button>
+							</div> -->
 						</li>
 						<li class="catalog-cards__item">
 							<a href="#">
 								<img src="./../../images/decors/template-5.png" alt="Шаблон магазина Аплюс" width="358" height="578">
 							</a>
+							<!-- <div class="catalog-cards__hover">
+								<h3 class="catalog-cards__hover__title">Study</h3>
+								<p class="catalog-cards__hover__text">Сайт для образовательных курсов</p>
+								<button class="button catalog-cards__hover__btn" type="button"><span class="catalog-cards__price">7 900 ₽</span></button>
+							</div> -->
 						</li>
 						<li class="catalog-cards__item">
 							<a href="#">
 								<img src="./../../images/decors/template-6.png" alt="Шаблон магазина Квас" width="358" height="578">
 							</a>
+							<!-- <div class="catalog-cards__hover">
+								<h3 class="catalog-cards__hover__title">Кваст</h3>
+								<p class="catalog-cards__hover__text">Сайт магазина напитков</p>
+								<button class="button catalog-cards__hover__btn" type="button"><span class="catalog-cards__price">5 900 ₽</span></button>
+							</div> -->
 						</li>
 					</ul>
 			</div>
@@ -147,5 +176,5 @@
 				</ol>
 			</div>
 		</div>
-	</div>	
+	</div>
 </section>
